--- a/03_스프링MVC1편_백엔드웹개발핵심/springmvc/src/main/resources/application.properties
+++ b/03_스프링MVC1편_백엔드웹개발핵심/springmvc/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-#hello.springmvc ???? ? ?? ?? ?? ??(trace: ? ???)
-logging.level.hello.springmvc=error
+#?? ?? ?? ??(?? info)
+logging.level.root=info
+#hello.springmvc ???? ? ?? ?? ?? ??
+logging.level.hello.springmvc=debug
